# rust-receipt-check

./: Cargo.toml  README.md
public/: categories.html  categories.js  index.html  receipts.html  receipts.js  scanner.html  scanner.js
src/: create_database.sql  database.rs  main.rs  ofd.rs  options.rs  qrcode.rs  tickets.rs  util.rs
src/categories/: data.rs  mod.rs
src/database/: create_database.sql  data.rs  mod.rs
src/qrcode/: data.rs  db.sqlite  mod.rs
src/tickets/: data.rs  mod.rs
tls/: certificate.pem  key.pem
