[package]
name = "receipt-check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
log = "0.4"
reqwest = "0.11"
serde_json = "1.0"
serde_qs = "0.12"
sqlite = "0.30"

[dependencies.time]
version = "0.3"
features = [ "formatting", "parsing", "macros" ]

[dependencies.tokio]
version = "1"
features = [ "full" ]

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.warp]
version = "0.3"
features = [ "tls" ]
